--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <ul>
         <li>
           <div class="contentImg"></div>
-          <div class="contentDisc">
+          <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
@@ -45,7 +45,7 @@
         </li>
         <li>
           <div class="contentImg"></div>
-          <div class="contentDisc">
+          <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
@@ -53,7 +53,7 @@
         </li>
         <li>
           <div class="contentImg"></div>
-          <div class="contentDisc">
+          <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
@@ -61,7 +61,7 @@
         </li>
         <li>
           <div class="contentImg"></div>
-          <div class="contentDisc">
+          <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
@@ -69,7 +69,7 @@
         </li>
         <li>
           <div class="contentImg"></div>
-          <div class="contentDisc">
+          <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
@@ -77,7 +77,7 @@
         </li>
         <li>
           <div class="contentImg"></div>
-          <div class="contentDisc">
+          <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
@@ -85,7 +85,7 @@
         </li>
         <li>
           <div class="contentImg"></div>
-          <div class="contentDisc">
+          <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
@@ -93,7 +93,7 @@
         </li>
         <li>
           <div class="contentImg"></div>
-          <div class="contentDisc">
+          <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
@@ -101,12 +101,14 @@
         </li>
         <li>
           <div class="contentImg"></div>
-          <div class="contentDisc">
+          <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
           </div>
         </li>
+
+
       </ul>
     </section>
   </main>
