final styles to nav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="logo">Etsy</div>
       <form class="searchbar">
-        <input type="text" placeholder=" Search for items or shops">
+        <input type="text" class="searchText" placeholder="Search for items or shops">
         <input type="submit" value="Search" class="button" id="search">
         <input type="submit" value="Browse" class="button" id="browse">
       </form>
