--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Whisky on Etsy</title>
-  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700|Gentium+Book+Basic' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="styles/vendor/normalize.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700|Lora' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="styles/vendor/normalize.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
