img propigation completed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Whisky on Etsy</title>
+  <title>Whiskey on Etsy</title>
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,700|Lora' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="styles/vendor/normalize.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -34,81 +34,15 @@
     </aside>
 
     <section>
-      <ul>
-        <li>
+      <ul id="content">
+        <!-- <li>
           <div class="contentImg"></div>
           <div class="contentDesc">
             <div class="title">Title</div>
             <div class="user">User</div>
             <div class="price">Price</div>
           </div>
-        </li>
-        <li>
-          <div class="contentImg"></div>
-          <div class="contentDesc">
-            <div class="title">Title</div>
-            <div class="user">User</div>
-            <div class="price">Price</div>
-          </div>
-        </li>
-        <li>
-          <div class="contentImg"></div>
-          <div class="contentDesc">
-            <div class="title">Title</div>
-            <div class="user">User</div>
-            <div class="price">Price</div>
-          </div>
-        </li>
-        <li>
-          <div class="contentImg"></div>
-          <div class="contentDesc">
-            <div class="title">Title</div>
-            <div class="user">User</div>
-            <div class="price">Price</div>
-          </div>
-        </li>
-        <li>
-          <div class="contentImg"></div>
-          <div class="contentDesc">
-            <div class="title">Title</div>
-            <div class="user">User</div>
-            <div class="price">Price</div>
-          </div>
-        </li>
-        <li>
-          <div class="contentImg"></div>
-          <div class="contentDesc">
-            <div class="title">Title</div>
-            <div class="user">User</div>
-            <div class="price">Price</div>
-          </div>
-        </li>
-        <li>
-          <div class="contentImg"></div>
-          <div class="contentDesc">
-            <div class="title">Title</div>
-            <div class="user">User</div>
-            <div class="price">Price</div>
-          </div>
-        </li>
-        <li>
-          <div class="contentImg"></div>
-          <div class="contentDesc">
-            <div class="title">Title</div>
-            <div class="user">User</div>
-            <div class="price">Price</div>
-          </div>
-        </li>
-        <li>
-          <div class="contentImg"></div>
-          <div class="contentDesc">
-            <div class="title">Title</div>
-            <div class="user">User</div>
-            <div class="price">Price</div>
-          </div>
-        </li>
-
-
+        </li> -->
       </ul>
     </section>
   </main>
