--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
 
   <main>
     <aside>
+      <p>Show results for:</p>
+      <dl></dl>
 
     </aside>
 
     <section>
+      <p id="resultsLine"><a href="">All Categories</a> > </p>
+      <p id="sortBy">Sort by: <a href="">Relevancy</a></p>
       <ul id="content">
 
       </ul>
