aside assigner working

--- a/index.html
+++ b/index.html
@@ -31,7 +31,24 @@
   <main>
     <aside>
       <p>Show results for:</p>
-      <dl></dl>
+      <dl>
+        <a href="#"><dt class="active">All Categories</dt></a>
+        <a href="#"><dt>Home & Living</dt></a>
+        <a href="#"><dt>Art & Collectibles</dt></a>
+        <a href="#"><dt>Wedings</dt></a>
+        <a href="#"><dt>Clothing</dt></a>
+        <a href="#"><dt>Jewelry</dt></a>
+        <a href="#"><dt>Paper & Party Supplies</dt></a>
+        <a href="#"><dt>Acccessories</dt></a>
+        <a href="#"><dt>Craft Supplies & Tools</dt></a>
+        <a href="#"><dt>Bags & Purses</dt></a>
+        <a href="#"><dt>Bath & Beauty</dt></a>
+        <a href="#"><dt>Shoes</dt></a>
+        <a href="#"><dt>Books, Movies, & Music</dt></a>
+        <a href="#"><dt>Electronics & Accessories</dt></a>
+        <a href="#"><dt>Toys & Games</dt></a>
+        <a href="#"><dt>Pet Supplies</dt></a>
+      </dl>
 
     </aside>
 
