category updater working

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </aside>
 
     <section>
-      <p id="resultsLine"><a href="">All Categories</a> > </p>
+      <a href=""><p id="resultsCat">All Categories</p></a><p id="resultsLine"> > </p>
       <p id="sortBy">Sort by: <a href="">Relevancy</a></p>
       <ul id="content">
 
