social icon hover working

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <form class="searchbar">
         <input type="text" class="searchText" placeholder="Search for items or shops">
         <input type="submit" value="Search" class="button" id="search">
-        <input type="submit" value="Browse" class="button" id="browse">
+        <input type="submit" value="Browse  ▾" class="button" id="browse">
       </form>
       <div class="loginWrapper">
         <button class="button" id="register">Register</button>
