taxonomy paths layout

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
       <p>Show results for:</p>
       <dl>
         <a href="#"><dt class="active">All Categories</dt></a>
-        <a href="#"><dt>Home & Living</dt></a>
-        <a href="#"><dt>Art & Collectibles</dt></a>
-        <a href="#"><dt>Wedings</dt></a>
-        <a href="#"><dt>Clothing</dt></a>
-        <a href="#"><dt>Jewelry</dt></a>
-        <a href="#"><dt>Paper & Party Supplies</dt></a>
-        <a href="#"><dt>Acccessories</dt></a>
-        <a href="#"><dt>Craft Supplies & Tools</dt></a>
-        <a href="#"><dt>Bags & Purses</dt></a>
-        <a href="#"><dt>Bath & Beauty</dt></a>
-        <a href="#"><dt>Shoes</dt></a>
-        <a href="#"><dt>Books, Movies, & Music</dt></a>
-        <a href="#"><dt>Electronics & Accessories</dt></a>
-        <a href="#"><dt>Toys & Games</dt></a>
-        <a href="#"><dt>Pet Supplies</dt></a>
+        <a href="#"><dt data-taxonomy="Home & Living">Home & Living</dt></a>
+        <a href="#"><dt data-taxonomy="Art & Collectibles">Art & Collectibles</dt></a>
+        <a href="#"><dt data-taxonomy="Weddings">Weddings</dt></a>
+        <a href="#"><dt data-taxonomy="Clothing">Clothing</dt></a>
+        <a href="#"><dt data-taxonomy="Jewelry">Jewelry</dt></a>
+        <a href="#"><dt data-taxonomy="Paper & Party Supplies">Paper & Party Supplies</dt></a>
+        <a href="#"><dt data-taxonomy="Accessories">Acccessories</dt></a>
+        <a href="#"><dt data-taxonomy="Craft Supplies & Tools">Craft Supplies & Tools</dt></a>
+        <a href="#"><dt data-taxonomy="Bags & Purses">Bags & Purses</dt></a>
+        <a href="#"><dt data-taxonomy="Bath & Beauty">Bath & Beauty</dt></a>
+        <a href="#"><dt data-taxonomy="Shoes">Shoes</dt></a>
+        <a href="#"><dt data-taxonomy="Books, Movies, & Music">Books, Movies, & Music</dt></a>
+        <a href="#"><dt data-taxonomy="Electronics & Accessories">Electronics & Accessories</dt></a>
+        <a href="#"><dt data-taxonomy="Toys & Games">Toys & Games</dt></a>
+        <a href="#"><dt data-taxonomy="Pet Supplies">Pet Supplies</dt></a>
       </dl>
 
     </aside>
