final layout changes and styles

--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
         <div class="refsec">
           <p><b>Item Type</b></p>
           <label class="rad">
-            <input type="radio" value="All Items" checked="checked"></input>
+            <input type="radio" name="radios" value="All Items" checked="checked"></input>
             <a href="#">All Items</a>
           </label>
           <br>
           <label class="rad">
-            <input type="radio" value="Handmade"></input>
+            <input type="radio" name="radios" value="Handmade"></input>
             <a href="#">Handmade</a>
           </label>
           <br>
           <label class="rad">
-            <input type="radio" value="Vintage"></input>
+            <input type="radio" name="radios" value="Vintage"></input>
             <a href="#">Vintage</a>
           </label>
         </div>
@@ -92,24 +92,24 @@
         <div class="refsec">
           <p><b>Ordering Options</b></p>
           <label class="rad">
-            <input type="checkbox">
+            <input type="checkbox" name="ordering">
             <a href="#">Accepts Etsy Gift Cards</a>
           </label>
           <br>
           <label class="rad">
-            <input type="checkbox">
+            <input type="checkbox" name="ordering">
             <a href="#">Customizable</a>
           </label>
         </div>
         <div class="refsec">
           <p><b>Shop Location</b></p>
           <label class="rad">
-            <input type="radio" value="Handmade" checked="checked"></input>
+            <input type="radio" name="location" value="Handmade" checked="checked"></input>
             <a href="#">Anywhere</a>
           </label>
           <br>
           <label class="rad">
-            <input type="radio" value="Vintage"></input>
+            <input type="radio" name="location" value="Vintage"></input>
             <a href="#">United States</a>
           </label>
           <a href="#"><p>Choose a custom location</p></a>
